<resources>
    <string name="app_name">Clever Crow</string>

    <string name="result_win">You Win</string>
    <string name="result_draw">Draw</string>
    <string name="result_lose">You Lose</string>


    <string name="result_repetition">by repetition</string>
    <string name="result_fifty">by 50-move rule</string>
    <string name="result_material">by insufficient material</string>
    <string name="result_stalemate">by stalemate</string>
    <string name="result_checkmate">by checkmate</string>
    <string name="result_resignation">by resignation</string>
    <string name="result_agreement">by agreement</string>

    <string name="penguin_chess">Penguin Chess</string>
    <string name="knight">Knight</string>
    <string name="bishop">Bishop</string>
    <string name="rook">Rook</string>
    <string name="queen">Queen</string>
    <string name="forward">Forward</string>
    <string name="undo_move">Undo Move</string>
    <string name="redo_move">Redo Move</string>
    <string name="go_to_start">Go to start</string>
    <string name="go_to_current_move">Go to current move</string>
    <string name="hint">Hint</string>
    <string name="try_again">Try Again</string>
    <string name="rematch">Rematch</string>
    <string name="menu">Menu</string>

    <string name="puzzle_passed">Puzzle Passed</string>
    <string name="puzzle_failed">Puzzle Failed</string>
    <string name="wrong_move">Wrong Move Played</string>
    <string name="new_puzzle">New Puzzle</string>
    <string name="load_position">Load Position</string>

    <string name="back_button">Back</string>



</resources>