<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.pinguapps.chesstrainer.ui.ChessView
        android:id="@+id/chessboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
    </com.pinguapps.chesstrainer.ui.ChessView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <ImageButton
            android:id="@+id/btn_go_to_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/step_backward_2"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:contentDescription="@string/go_to_start">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_undo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/step_backward"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:contentDescription="@string/undo_move">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/lightbulb_on_outline"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:contentDescription="@string/hint">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_redo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/step_forward"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:contentDescription="@string/redo_move">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_go_current"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/step_forward_2"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:contentDescription="@string/go_to_current_move">
        </ImageButton>
    </LinearLayout>

</LinearLayout>